<resources>
    <string name="app_name">Inoprod</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_menu_aide">MenuAide</string>
    <string name="title_activity_aide">Aide</string>
    <string name="title_activity_annuaire">Annuaire</string>
    <string name="title_activity_login_profil">LoginProfil</string>
    <string name="scanbadge">Veuillez scanner votre badge</string>
    <string name="title_activity_main_menu_magasinier">MainMenuMagasinier</string>
    <string name="ordredujour">Ordre du jour</string>
    <string name="title_activity_import_coupe_cables">ImportCoupeCables</string>
    <string name="debitcable">Débits des câbles &amp; fils</string>
    <string name="title_activity_debit_cables">DebitCables</string>
    <string name="title_activity_regroupement_cables">RegroupementCables</string>
    <string name="regroupementcables">Regroupement des câbles</string>
    <string name="title_activity_saisie_tracabilite_composant">SaisieTracabiliteComposant</string>
    <string name="referencearticle">Référence de l\'article</string>
    <string name="debitscomposants">Débits des composants</string>
    <string name="title_activity_servitude_composants">ServitudeComposants</string>
    <string name="title_activity_kitting_cables_composants">KittingCablesComposants</string>
    <string name="regroupementtetes">Regroupement des têtes</string>
    <string name="title_activity_main_menu_cableur">MainMenuCableur</string>
    <string name="title_activity_reprise_blindage_ta">RepriseBlindageTa</string>
    <string name="title_activity_denudage_sertissage_contact_ta">DenudageSertissageContactTa</string>
    <string name="title_activity_main_menu_controleur">MainMenuControleur</string>
    <string name="title_activity_main_menu_preparateur">MainMenuPreparateur</string>
    <string name="title_activity_info_produit">InfoProduit</string>
    <string name="matricule">Matricule</string>
    <string name="nom">Nom</string>
    <string name="prenom">Prénom</string>
    <string name="profilMetier">Profil Métier</string>
    <string name="annuairePersonnel">Annuaire du personnel autorisé</string>
    <string name="numeroLotArticle">Numéro de lot de l’article</string>
    <string name="etatCable">Etat des cables</string>
    <string name="instructionDebitCables">Référez-vous aux instructions, affichées sur l’écran de la machine de coupe, jusqu’à la fin de la production de cette séquence</string>
    <string name="numeroFilCable">Numéro de fil ou cable</string>
    <string name="positionChariot">Position Chariot</string>
    <string name="repereElectrique">Repère éléctrique</string>
    <string name="numeroConnecteur">Numéro de composant</string>
    <string name="ordreRealisation">Ordre de réalisation</string>
    <string name="longueurCoupe">Longueur des coupes</string>
    <string name="unite">Unité</string>
    <string name="gainage">Gainage</string>
    <string name="longueur">Longueur</string>
    <string name="numeroReprise">Numéro de reprise</string>
    <string name="sensReprise">Sens de reprise</string>
    <string name="statutLiaison">Statut de la liaison</string>
    <string name="numeroRevisionLiaison">N° Révision liaison</string>
    <string name="typeCable">Type de cable</string>
    <string name="numeroFilDansCable">Numero fil dans cable</string>
    <string name="couleurFil">Couleur de fil</string>
    <string name="referenceFabricantContact">Réference fabricant contact</string>
    <string name="referenceInterneContact">Réference interne contact</string>
    <string name="referencePince">Réference pince</string>
    <string name="numeroSeriePince">N° Série pince</string>
    <string name="reglagePince">Réglage pince</string>
    <string name="instructionDenudageSertissagr">Veuillez scanner un des numéros de câble blindé</string>
    <string name="denudageSertissageTa">Dénudage &amp; Sertissage des têtes A</string>
    <string name="instructionImportCables">"Importer le fichier « débit câble » dans la machine de coupe et valider seulement après le débit du premier câble "</string>
    <string name="designationProduit">Designation produit</string>
    <string name="numeroHarnais">Numéro de harnais:</string>
    <string name="standard">Standard de fabrication:</string>
    <string name="numeroSerie">Numero de série</string>
    <string name="numeroTraitement">Numéro de traitement:</string>
    <string name="numeroRevisionHarnais">Numéro de révision harnais</string>
    <string name="referenceFichierSource">Reférence fichier source:</string>
    <string name="infoProduit">Informations Produit</string>
    <string name="instructionLogin">Veuillez scanner votre badge</string>
    <string name="identifiant">Identifiant</string>
    <string name="mdp">Mot de passe</string>
    <string name="menuOperateur">Menu principal profil opérateurs</string>
    <string name="ordreOperation">Ordre des opérations</string>
    <string name="operationsRealiser">Opérations à réaliser</string>
    <string name="referenceOutillage">Référence outillage</string>
    <string name="menuControleurs">Menu principal profil contrôleurs</string>
    <string name="ordreJour">Ordre du jour</string>
    <string name="phaseOperatoireSuivante">Phase opératoire suivante</string>
    <string name="menuMagasinier">Menu principal profil magasiniers</string>
    <string name="menuPreparateur">Menu principal profil préparateurs</string>
    <string name="importSources">Importer les données sources</string>
    <string name="genererDebit">Générer fichier débit câbles</string>
    <string name="genererKitting">Générer fichier kitting têtes</string>
    <string name="numeroPositionChariot">Numéro de position chariot</string>
    <string name="numeroCheminement">Numéro de cheminement:</string>
    <string name="instructionRegroupementCables">Regroupez les câbles par numéro de position de chariot</string>
    <string name="referenceFabricant">Référence fabricant</string>
    <string name="referenceInterne">Référence interne</string>
    <string name="listeCables">Liste des cables presents en position</string>
    <string name="repriseBlindageTa">Reprise de blindage des têtes A</string>
    <string name="instructionRepriseBlindage">Veuillez scanner un des numéros de câble blindé</string>
    <string name="typeFilReprise">Type de fil de reprise</string>
    <string name="referenceFabricantManchon">Réference fabricant du manchon</string>
    <string name="referenceInterneManchon">Réference interne du manchon</string>
    <string name="numeroSerieOutillage">N° Série Outillage</string>
    <string name="reglageTemperature">Réglage temperature</string>
    <string name="instructionSaisieTracabilite">Veuillez scanner ou saisir la référence composant figurant sur l’emballage</string>
    <string name="reference">Référence</string>
    <string name="numeroLot">Numéro de lot</string>
    <string name="scan">Scan</string>
    <string name="designation">Désignation</string>
    <string name="fabricantFournisseur">Fabricant/Fournisseur:</string>
    <string name="referenceImposee">Réf imposée</string>
    <string name="instructionServitude">"Veuillez effectuer  la servitude de la référence par position de chariot "</string>
    <string name="quantite">Quantité</string>
    <string name="etatDebits">Etats des débits</string>
    <string name="title_activity_finalisation_ta">FinalisationTa</string>
    <string name="finalisation_ta">Finalisation têtes A</string>
    <string name="orientationRaccord">Orientation Raccord</string>
    <string name="etatFinalisation">Etat finalisation</string>
    <string name="instructionFinalisationTa">"Veuillez monter les accessoires ci-dessous &amp; finaliser la tête "</string>
    <string name="indicationAccessoire">Indication Accessoire</string>
    <string name="title_activity_tri_aboutissants_ta">TriAboutissantsTa</string>
    <string name="triAboutissantsTa">Tri des aboutissants têtes A</string>
    <string name="nombreGroupe">Nombre de groupe</string>
    <string name="instructionTriAboutissantsTa">"Veuillez regrouper les fils par aboutissant, lover &amp; emballer le faisceaux "</string>
    <string name="indicationRegroupement">Indication de regroupement</string>
    <string name="groupe">Groupe</string>
    <string name="numeroSegregation">Numéro de ségrégation</string>
    <string name="connecteurAboutissant">Connecteur Aboutissant</string>
    <string name="zoneLocalisation">Zone &amp; Localisation</string>
    <string name="numeroRoute">Numéro de route</string>
    <string name="nombreFilArrivantTb">Nombre de fils arrivant en tête B</string>
    <string name="title_activity_preparation_ta">PreparationTa</string>
    <string name="preparationTa">Préparation têtes A</string>
    <string name="instructionPreparationTa">Veuillez monter les faux contacts &amp; obturateurs aux bornes définies</string>
    <string name="elementsMonter">Eléments à monter</string>
    <string name="numeroBornePosition">N° Borne /Position</string>
    <string name="articleMonte">Article Monté</string>
    <string name="title_activity_denudage_sertissage_enfichage_ta">DenudageSertissageEnfichageTa</string>
    <string name="denudageSertissageEnfichageTa">Denudage, Sertissage &amp; enfichage des têtes A</string>
    <string name="instructionDenudageSertissageEnfichageTa">Veuillez scanner un des numéros de fil</string>
    <string name="referencePositionneur">Réference positionneur</string>
    <string name="numeroBorne">Numero borne</string>
    <string name="title_activity_enfichages_ta">EnfichagesTa</string>
    <string name="enfichageTa">Enfichage des têtes A</string>
    <string name="indicationInsertion">Indication d\'insertion</string>
    <string name="title_activity_cheminement_ta">CheminementTa</string>
    <string name="cheminementTa">Cheminement têtes A</string>
    <string name="instructionCheminementTa">Veuillez scanner un numéro de fil ou groupe de fil figurant sur l’étiquette</string>
    <string name="indicationCheminement">Indication de cheminement</string>
    <string name="nombreSectionGaine">Nombre de sections sous gaine</string>
    <string name="localisationZonePose">Localisation de la zone de pose</string>
    <string name="title_activity_positionnement_ta_tab">PositionnementTaTab</string>
    <string name="instructionPositionnementTaTab">Positionner le connecteur sur le support indiqué par la Zone &amp; localisation et cheminer la section de toron jusqu’à son intersection</string>
    <string name="numeroSection">Numero de section</string>
    <string name="typeSupportAboutissant">Type Support Aboutissant</string>
    <string name="title_activity_cheminement_fil_afil">CheminementFilAFil</string>
    <string name="cheminementsCablesTb">Cheminement des câbles têtes B / têtes B</string>
    <string name="title_activity_frettage">Frettage</string>
    <string name="frettages">Frettages</string>
    <string name="typeFrette">Type de frette</string>
    <string name="nombrePoint">Nombre de point</string>
    <string name="instructionFrettage">Veuillez réaliser le frettage entre les deux points définis</string>
    <string name="zoneFrettage">Zone de frettage</string>
    <string name="typeConnecteurTenant">Type Connecteur Tenant</string>
    <string name="title_activity_denudage_sertissage_manchons_cosses_tb">DenudageSertissageManchonsCossesTb</string>
    <string name="denudageSertissageManchonsCossesTb">Sertissage de cosses &amp; manchons en tête B</string>
    <string name="pointsVerifier">Points à verifier</string>
    <string name="controleValide">Contrôle validé</string>
    <string name="controleRefuse">Contrôle refusé</string>
    <string name="controleSertissageTa">Contrôle des sertissages têtes A</string>
    <string name="instructionControleSertissageTa">Veuillez scanner un des numéros de fil</string>
    <string name="controleAcceptable">Contôle Acceptable</string>
</resources>