<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    tools:context="${relativePackage}.${activityClass}" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:text="@string/repriseBlindageTa" />

    <ImageButton
        android:id="@+id/exitButton1"
        android:layout_width="50dip"
        android:layout_height="50dip"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:src="@drawable/pause21" />
    
        <TextView
        android:id="@+id/timeDisp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/imageView1"
        android:layout_alignRight="@id/imageView1"
        android:layout_below="@id/imageView1" />

    <ImageButton
        android:id="@+id/infoButton1"
        android:layout_width="50dip"
        android:layout_height="50dip"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:src="@drawable/aide3" />

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="50dip"
        android:layout_height="50dip"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_margin="@dimen/b12"
        android:src="@drawable/chrono2" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageView1"
        android:layout_centerHorizontal="true"
        android:layout_margin="7dp"
        android:text="@string/instructionRepriseBlindage"
        android:textSize="@dimen/b12" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/textView1"
        android:layout_margin="@dimen/b12"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dip" >

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="105dp"
                android:text="@string/numeroConnecteur"
                android:textColor="#0000ff"
                android:textSize="@dimen/forT" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dip"
                android:text="@string/numeroPositionChariot"
                android:textColor="#0000ff"
                android:textSize="@dimen/forT" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp" >

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="30dip"
                android:text="@string/repereElectrique"
                android:textColor="#0000ff"
                android:textSize="@dimen/forT" />
        </LinearLayout>
    </LinearLayout>

    <ImageButton
        android:id="@+id/imageButton1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/exitButton1"
        android:layout_toLeftOf="@id/exitButton1"
        android:src="@drawable/pause31" />

    <ImageButton
        android:id="@+id/imageButton2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/exitButton1"
        android:layout_alignTop="@id/exitButton1"
        android:layout_toLeftOf="@+id/imageButton1"
        android:src="@drawable/back" />

    <LinearLayout
        android:id="@+id/head"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/titleTab"
        android:layout_centerHorizontal="true"
        android:layout_toLeftOf="@id/exitButton1"
        android:layout_toRightOf="@id/infoButton1" >

        <TextView
            android:id="@+id/textView9"
            android:layout_width="75dp"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/statutLiaison"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="#0000ff"
            android:textSize="@dimen/forTMin" />

        <TextView
            android:id="@+id/textView10"
            android:layout_width="75dp"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/numeroRevisionLiaison"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="#0000ff"
            android:textSize="@dimen/forTMin" />

        <TextView
            android:id="@+id/textView11"
            android:layout_width="75dp"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/numeroFilCable"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="#0000ff"
            android:textSize="@dimen/forTMin" />

        <TextView
            android:id="@+id/textView12"
            android:layout_width="75dp"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/typeCable"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="#0000ff"
            android:textSize="@dimen/forTMin" />

        <TextView
            android:id="@+id/temps"
            android:layout_width="75dp"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/numeroReprise"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="#0000ff"
            android:textSize="@dimen/forTMin" />

        <TextView
            android:id="@+id/textView14"
            android:layout_width="75dp"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/typeFilReprise"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="#0000ff"
            android:textSize="@dimen/forTMin" />

        <TextView
            android:id="@+id/textView16"
            android:layout_width="75dp"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/referenceFabricantManchon"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="#0000ff"
            android:textSize="@dimen/forTMin" />

        <TextView
            android:id="@+id/textView17"
            android:layout_width="75dp"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/referenceInterneManchon"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="#0000ff"
            android:textSize="@dimen/forTMin" />

        <TextView
            android:id="@+id/textView18"
            android:layout_width="75dp"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/referenceOutillage"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="#0000ff"
            android:textSize="@dimen/forTMin" />

        <TextView
            android:id="@+id/textView19"
            android:layout_width="75dp"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/numeroSerieOutillage"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="#0000ff"
            android:textSize="@dimen/forTMin" />

        <TextView
            android:id="@+id/textView20"
            android:layout_width="75dp"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/reglageTemperature"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="#0000ff"
            android:textSize="@dimen/forTMin" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/titleTab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView2"
        android:layout_centerHorizontal="true"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="105dp"
            android:text="@string/numeroReprise"
            android:textColor="#0000ff"
            android:textSize="@dimen/forT" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="105dp"
            android:text="@string/sensReprise"
            android:textColor="#0000ff"
            android:textSize="@dimen/forT" />
    </LinearLayout>

    <GridView
        android:id="@+id/gridview"
        android:layout_width="1150dp"
        android:layout_height="wrap_content"
        android:layout_above="@id/imageButton1"
        android:layout_alignRight="@+id/imageView1"
        android:layout_below="@+id/head"
        android:layout_margin="5dp"
        android:layout_toRightOf="@id/infoButton1"
        android:numColumns="1"
        android:stretchMode="columnWidth" >

    </GridView>

    <ImageButton
        android:id="@+id/imageButton3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@id/exitButton1"
        android:layout_centerHorizontal="true"
        android:src="@drawable/valider9" />

    <ImageButton
        android:id="@+id/imageButton4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/imageButton3"
        android:layout_toLeftOf="@+id/imageButton3"
        android:src="@drawable/aide51" />

</RelativeLayout>